# i18n-test

./: .gitignore  .gitreview  README.rst  requirements-py3.txt  setup.cfg  test-requirements.txt
doc/source/: conf.py  index.rst
tests/: test_dummy.py
tools/: pseudo.py
